--- a/CubicSplinesInterpolation.csproj
+++ b/CubicSplinesInterpolation.csproj
@@ -36,23 +36,16 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MathLibrary">
-      <HintPath>MathLibrary\bin\Release\MathLibrary.dll</HintPath>
-    </Reference>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
-    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CubicSpline.cs" />
@@ -62,6 +55,7 @@
     <Compile Include="CubicSplinesInterpolation.Designer.cs">
       <DependentUpon>CubicSplinesInterpolation.cs</DependentUpon>
     </Compile>
+    <Compile Include="Interpolation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TriDiagonalMatrix.cs" />
